--- a/app-misc/wxremind/ChangeLog
+++ b/app-misc/wxremind/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 May 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
+  Version bump.
+
   25 Feb 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
   Added some error-checking.
 
