--- a/games-roguelike/lostlabyrinth/ChangeLog
+++ b/games-roguelike/lostlabyrinth/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 May 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
+  Use -O1 optimisation level as -O2 and higher lead to excessive memeory
+  	consumption when compiling main program.  Linking part of compile
+  	now respects LDFLAGS.  Use -j1 as -j3 on a dual-core machine
+  	fails.  Added directFB as dependency.
+
   17 May 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
   Initial ebuild.
 
