--- a/x11-themes/comix-xcursors/ChangeLog
+++ b/x11-themes/comix-xcursors/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/comix-xcursors
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  30 May 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
+  Version bump.
 
   12 Nov 2007; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
   Cleaned header, added binchecks, strip to RESTRICT.
