--- a/games-roguelike/lostlabyrinth/ChangeLog
+++ b/games-roguelike/lostlabyrinth/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jun 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
+  Add 'live' ebuild of lostlabyrinth as currently the only way to get the
+  	game is through the subversion repository.  The live ebuild also
+  	supersedes all previous versions because of this, so they have
+  	been removed.
+
   26 May 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
   Use -O1 optimisation level as -O2 and higher lead to excessive memeory
   	consumption when compiling main program.  Linking part of compile
