--- a/sci-astronomy/atnf-miriad/ChangeLog
+++ b/sci-astronomy/atnf-miriad/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Jun 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
+  Version bump, usual changes to list of update archives and digests of base
+          files.  People using this ebuild  should remove all miriad-* and
+          mirupd-* files before upgrading. Other changes include more
+  	heavily optimized compiler flags and explicit largefile support.
+
   12 May 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
   Version bump, usual changes to list of update archives and digests of base
   	files.  People using this ebuild  should remove all miriad-* and
