--- a/sci-astronomy/atnf-miriad/ChangeLog
+++ b/sci-astronomy/atnf-miriad/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jun 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
+  Many fixes to both ebuild structure and compilation.  Removed most of the
+  	patches, as they are unneeded.
+
   12 Jun 2008; Joshua Rich <joshua@mso.anu.edu.au> ChangeLog:
   Version bump, usual changes to list of update archives and digests of base
           files.  People using this ebuild  should remove all miriad-* and
