--- a/README
+++ b/README
@@ -2,10 +2,18 @@
 
 So for some time now I have been using Gentoo Linux, and trying to be
 a good Gentoo user, I’ve created some unofficial, possibly buggy, but
-generally usable ‘ebuilds‘ for various astronomy software and other
-software packages I use.  They can be found in this overlay.
+generally usable ‘ebuilds‘ for various programs I use.  Some of the
+programs in this overlay include live versions of QuodLibet media player,
+Logitech Squeezebox Server (when possible, else latest stable),
+various roguelike games, a few niche multimedia apps, some
+gtk+/xcursor/icon themes and a few random X11 apps.
 
-== USING THIS OVERLAY
+== REQUIREMENTS
+
+- This overlay requires a version of portage that is EAPI 2 compatible.
+- Some ebuilds from this overlay  require the Gnome overlay.
+
+== INSTALL
 
 You can use this overlay with layman (app-portage/layman). To add the
 overlay, edit the file /etc/layman/layman.cfg and add the following
