--- a/README
+++ b/README
@@ -16,11 +16,10 @@
 So for some time now I have been using Gentoo Linux, and trying to be
 a good Gentoo user, I’ve created some unofficial, possibly buggy, but
 generally usable ‘ebuilds‘ for various programs I use.  Some of the
-programs in this overlay include live versions of QuodLibet media player,
-Logitech Squeezebox Server (when possible, else latest stable),
-various roguelike games, a few niche multimedia apps, some
+programs in this overlay include live versions of QuodLibet media
+player, various roguelike games,a few niche multimedia apps, some
 gtk+/xcursor/icon themes and a few random X11 apps.
-
+ 
 == REQUIREMENTS
 
 - This overlay requires a version of portage that is EAPI 2 compatible.
